// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SilenceComment /> Matches snapshot when collapsed 1`] = `
"
<div class=\\"d-flex flex-row\\">
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"bell-slash\\"
      class=\\"svg-inline--fa fa-bell-slash text-muted\\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 640 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M186 120.5C209 85.38 245.4 59.84 288 51.2V32C288 14.33 302.3 .0003 320 .0003C337.7 .0003 352 14.33 352 32V51.2C425 66.03 480 130.6 480 208V226.8C480 273.9 497.3 319.2 528.5 354.4L535.9 362.7C544.3 372.2 546.4 385.6 541.2 397.1C540.1 397.5 540.8 397.1 540.6 398.4L630.8 469.1C641.2 477.3 643.1 492.4 634.9 502.8C626.7 513.2 611.6 515.1 601.2 506.9L9.196 42.89C-1.236 34.71-3.065 19.63 5.112 9.196C13.29-1.236 28.37-3.065 38.81 5.112L186 120.5zM160 226.8V222.1L406.2 416H128C115.4 416 103.1 408.6 98.81 397.1C93.65 385.6 95.71 372.2 104.1 362.7L111.5 354.4C142.7 319.2 160 273.9 160 226.8V226.8zM320 512C303 512 286.7 505.3 274.7 493.3C262.7 481.3 256 464.1 256 448H384C384 464.1 377.3 481.3 365.3 493.3C353.3 505.3 336.1 512 320 512z\\"
      >
      </path>
    </svg>
  </div>
  <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
    <div class=\\"components-managed-silence-comment text-truncate overflow-hidden\\">
      Mocked Silence
    </div>
    <div class=\\"components-managed-silence-cite mt-1 d-flex flex-row\\">
      <span class=\\"text-muted text-truncate overflow-hidden me-2\\">
        — me@example.com
      </span>
      <div class=\\"d-flex flex-row justify-content-end flex-grow-1\\">
        <span class=\\"badge bg-light components-label\\">
          Expires in 30 minutes
        </span>
      </div>
    </div>
  </div>
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
      <div class=\\" tooltip-trigger\\">
        <span class=\\"bg-primary rounded-pill components-label-with-hover components-label badge\\">
          123
        </span>
      </div>
      <span class=\\"badge components-label with-click\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"chevron-down\\"
          class=\\"svg-inline--fa fa-chevron-down fa-rotate-180 m-auto text-muted cursor-pointer\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 448 512\\"
          style=\\"transition: transform 0.25s ease-in-out;\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z\\"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
</div>
"
`;

exports[`<SilenceComment /> Matches snapshot when collapsed and multiple clusters are present 1`] = `
"
<div class=\\"d-flex flex-row\\">
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"bell-slash\\"
      class=\\"svg-inline--fa fa-bell-slash text-muted\\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 640 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M186 120.5C209 85.38 245.4 59.84 288 51.2V32C288 14.33 302.3 .0003 320 .0003C337.7 .0003 352 14.33 352 32V51.2C425 66.03 480 130.6 480 208V226.8C480 273.9 497.3 319.2 528.5 354.4L535.9 362.7C544.3 372.2 546.4 385.6 541.2 397.1C540.1 397.5 540.8 397.1 540.6 398.4L630.8 469.1C641.2 477.3 643.1 492.4 634.9 502.8C626.7 513.2 611.6 515.1 601.2 506.9L9.196 42.89C-1.236 34.71-3.065 19.63 5.112 9.196C13.29-1.236 28.37-3.065 38.81 5.112L186 120.5zM160 226.8V222.1L406.2 416H128C115.4 416 103.1 408.6 98.81 397.1C93.65 385.6 95.71 372.2 104.1 362.7L111.5 354.4C142.7 319.2 160 273.9 160 226.8V226.8zM320 512C303 512 286.7 505.3 274.7 493.3C262.7 481.3 256 464.1 256 448H384C384 464.1 377.3 481.3 365.3 493.3C353.3 505.3 336.1 512 320 512z\\"
      >
      </path>
    </svg>
  </div>
  <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
    <div class=\\"components-managed-silence-comment text-truncate overflow-hidden\\">
      Mocked Silence
    </div>
    <div class=\\"components-managed-silence-cite mt-1 d-flex flex-row\\">
      <span class=\\"text-muted text-truncate overflow-hidden me-2\\">
        — me@example.com
      </span>
      <div class=\\"d-flex flex-row justify-content-end flex-grow-1\\">
        <span class=\\"badge bg-light components-label\\">
          Expires in 30 minutes
        </span>
        <span class=\\"badge bg-secondary mx-1 components-label\\">
          ha
        </span>
      </div>
    </div>
  </div>
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
      <div class=\\" tooltip-trigger\\">
        <span class=\\"bg-primary rounded-pill components-label-with-hover components-label badge\\">
          123
        </span>
      </div>
      <span class=\\"badge components-label with-click\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"chevron-down\\"
          class=\\"svg-inline--fa fa-chevron-down fa-rotate-180 m-auto text-muted cursor-pointer\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 448 512\\"
          style=\\"transition: transform 0.25s ease-in-out;\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z\\"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
</div>
"
`;

exports[`<SilenceComment /> Matches snapshot when expanded 1`] = `
"
<div class=\\"d-flex flex-row\\">
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"bell-slash\\"
      class=\\"svg-inline--fa fa-bell-slash text-muted\\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 640 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M186 120.5C209 85.38 245.4 59.84 288 51.2V32C288 14.33 302.3 .0003 320 .0003C337.7 .0003 352 14.33 352 32V51.2C425 66.03 480 130.6 480 208V226.8C480 273.9 497.3 319.2 528.5 354.4L535.9 362.7C544.3 372.2 546.4 385.6 541.2 397.1C540.1 397.5 540.8 397.1 540.6 398.4L630.8 469.1C641.2 477.3 643.1 492.4 634.9 502.8C626.7 513.2 611.6 515.1 601.2 506.9L9.196 42.89C-1.236 34.71-3.065 19.63 5.112 9.196C13.29-1.236 28.37-3.065 38.81 5.112L186 120.5zM160 226.8V222.1L406.2 416H128C115.4 416 103.1 408.6 98.81 397.1C93.65 385.6 95.71 372.2 104.1 362.7L111.5 354.4C142.7 319.2 160 273.9 160 226.8V226.8zM320 512C303 512 286.7 505.3 274.7 493.3C262.7 481.3 256 464.1 256 448H384C384 464.1 377.3 481.3 365.3 493.3C353.3 505.3 336.1 512 320 512z\\"
      >
      </path>
    </svg>
  </div>
  <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
    <div class=\\"components-managed-silence-comment \\">
      Mocked Silence
    </div>
    <div class=\\"components-managed-silence-cite mt-1 d-flex flex-row\\">
      <span class=\\"text-muted text-truncate overflow-hidden \\">
        — me@example.com
      </span>
    </div>
  </div>
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
      <div class=\\" tooltip-trigger\\">
        <span class=\\"bg-primary rounded-pill components-label-with-hover components-label badge\\">
          123
        </span>
      </div>
      <span class=\\"badge components-label with-click\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"chevron-down\\"
          class=\\"svg-inline--fa fa-chevron-down m-auto text-muted cursor-pointer\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 448 512\\"
          style=\\"transition: transform 0.25s ease-in-out;\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z\\"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
</div>
"
`;

exports[`<SilenceComment /> Matches snapshot when expanded and multiple clusters are present 1`] = `
"
<div class=\\"d-flex flex-row\\">
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <svg
      aria-hidden=\\"true\\"
      focusable=\\"false\\"
      data-prefix=\\"fas\\"
      data-icon=\\"bell-slash\\"
      class=\\"svg-inline--fa fa-bell-slash text-muted\\"
      role=\\"img\\"
      xmlns=\\"http://www.w3.org/2000/svg\\"
      viewbox=\\"0 0 640 512\\"
    >
      <path
        fill=\\"currentColor\\"
        d=\\"M186 120.5C209 85.38 245.4 59.84 288 51.2V32C288 14.33 302.3 .0003 320 .0003C337.7 .0003 352 14.33 352 32V51.2C425 66.03 480 130.6 480 208V226.8C480 273.9 497.3 319.2 528.5 354.4L535.9 362.7C544.3 372.2 546.4 385.6 541.2 397.1C540.1 397.5 540.8 397.1 540.6 398.4L630.8 469.1C641.2 477.3 643.1 492.4 634.9 502.8C626.7 513.2 611.6 515.1 601.2 506.9L9.196 42.89C-1.236 34.71-3.065 19.63 5.112 9.196C13.29-1.236 28.37-3.065 38.81 5.112L186 120.5zM160 226.8V222.1L406.2 416H128C115.4 416 103.1 408.6 98.81 397.1C93.65 385.6 95.71 372.2 104.1 362.7L111.5 354.4C142.7 319.2 160 273.9 160 226.8V226.8zM320 512C303 512 286.7 505.3 274.7 493.3C262.7 481.3 256 464.1 256 448H384C384 464.1 377.3 481.3 365.3 493.3C353.3 505.3 336.1 512 320 512z\\"
      >
      </path>
    </svg>
  </div>
  <div class=\\"mx-2 flex-shrink-1 flex-grow-1 mw-1p\\">
    <div class=\\"components-managed-silence-comment \\">
      Mocked Silence
    </div>
    <div class=\\"components-managed-silence-cite mt-1 d-flex flex-row\\">
      <span class=\\"text-muted text-truncate overflow-hidden \\">
        — me@example.com
      </span>
    </div>
  </div>
  <div class=\\"flex-shrink-0 flex-grow-0\\">
    <div class=\\"d-flex flex-column flex-sm-row justify-content-between align-items-center\\">
      <div class=\\" tooltip-trigger\\">
        <span class=\\"bg-primary rounded-pill components-label-with-hover components-label badge\\">
          123
        </span>
      </div>
      <span class=\\"badge components-label with-click\\">
        <svg
          aria-hidden=\\"true\\"
          focusable=\\"false\\"
          data-prefix=\\"fas\\"
          data-icon=\\"chevron-down\\"
          class=\\"svg-inline--fa fa-chevron-down m-auto text-muted cursor-pointer\\"
          role=\\"img\\"
          xmlns=\\"http://www.w3.org/2000/svg\\"
          viewbox=\\"0 0 448 512\\"
          style=\\"transition: transform 0.25s ease-in-out;\\"
        >
          <path
            fill=\\"currentColor\\"
            d=\\"M224 416c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L224 338.8l169.4-169.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-192 192C240.4 412.9 232.2 416 224 416z\\"
          >
          </path>
        </svg>
      </span>
    </div>
  </div>
</div>
"
`;
